tests/snapshots/solver_traces@14170416240685539831.snap
---
source: tests/trace_solver.rs
---
Query: `[&x]: &[&mut T]`

[&x] @ p: &[&mut T]
// Applying rule `ConstructorRef`
&x @ &(*p).0: &&mut T
// Applying rule `Deref`
x @ *&(*p).0: &mut T

// Final bindings:
let x: &mut T = *&(*p).0
