tests/snapshots/solver_traces@146482294315474431.snap
---
source: tests/trace_solver.rs
---
Query: `&x: T`

&x @ p: T
// ERROR: no rules applies to &x @ p: T
