tests/snapshots/solver_traces@14703851252250396787.snap
---
source: tests/trace_solver.rs
---
Query: `ref x: T`

ref x @ p: T
// Applying rule `Binding`
x @ &p: &T

// Final bindings:
let x: &T = &p
