tests/snapshots/solver_traces@15635286680127260077.snap
---
source: tests/trace_solver.rs
---
Query: `&[[x]]: &[&mut [T]]`

&[[x]] @ p: &[&mut [T]]
// Applying rule `Deref`
[[x]] @ *p: [&mut [T]]
// Applying rule `Constructor`
[x] @ (*p).0: &mut [T]
// Applying rule `ConstructorRef`
x @ &mut (*(*p).0).0: &mut T

// Final bindings:
let x: &mut T = &mut (*(*p).0).0
