tests/snapshots/solver_traces@17922595532774456251-2.snap
---
source: tests/trace_solver.rs
---
Query: `&x: &T`

&x @ p: &T
// Applying rule `Deref`
x @ *p: T

// Successful:
let x: T = *p
