tests/snapshots/solver_traces@17922595532774456251.snap
---
source: tests/trace_solver.rs
---
Query: `&x: &T`

&x @ p: &T
// Applying rule `Deref`
x @ *p: T

// Final bindings:
let x: T = *p
