tests/snapshots/solver_traces@17925950400224955785.snap
---
source: tests/trace_solver.rs
---
Query: `[&x]: &[&T]`

[&x] @ p: &[&T]
// Applying rule `ConstructorRef`
&x @ &(*p).0: &&T
// Applying rule `Deref`
x @ *&(*p).0: &T

// Final bindings:
let x: &T = *&(*p).0
