tests/snapshots/solver_traces@4841169570514963575.snap
---
source: tests/trace_solver.rs
---
Query: `[x, y]: &[T, U]`

[x, y] @ p: &[T, U]
// Applying rule `ConstructorRef`
x @ &(*p).0: &T
y @ &(*p).1: &U

// Final bindings:
let x: &T = &(*p).0
let y: &U = &(*p).1
