tests/snapshots/solver_traces@6292032512673485865.snap
---
source: tests/trace_solver.rs
---
Query: `&[[&x]]: &[&mut [T]]`

&[[&x]] @ p: &[&mut [T]]
// Applying rule `Deref`
[[&x]] @ *p: [&mut [T]]
// Applying rule `Constructor`
[&x] @ (*p).0: &mut [T]
// Applying rule `ConstructorRef`
&x @ &mut (*(*p).0).0: &mut T
// Applying rule `Deref`
&x @ (&mut (*(*p).0).0 as &_): &T
// Applying rule `ExprSimplification`
&x @ &(*(*p).0).0: &T
// Applying rule `Deref`
x @ *&(*(*p).0).0: T

// Final bindings:
let x: T = *&(*(*p).0).0
